mongo-pv-pvc2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb
spec:
  containers:
    - image: mongo
      name: mongodb
      volumeMounts:
        - mountPath: /data/db
          name: mongodb
  volumes:
    - name: mongodb
      persistentVolumeClaim:
        claimName: mongo-pvc
