http-go-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: http-go-ingress
spec:
  rules:
    - host: gasbugs.com
      http:
        paths:
          - path: /
            backend:
              serviceName: http-go-svc
              servicePort: 80
